[package]
name = "rich-sdl2-ttf-rust"
version = "0.9.0"
authors = ["MikuroXina <ryosukadnak@gmail.com>"]
edition = "2021"
description = "The sdl_ttf 2.0 wrapper for Rust."
repository = "https://github.com/MikuroXina/rich-sdl2-ttf-rust"
documentation = "https://mikuroxina.github.io/rich-sdl2-ttf-rust/rich_sdl2_ttf_rust/"
license = "Apache-2.0"
keywords = ["sdl2", "wrapper", "binding"]
categories = ["graphics", "rendering"]
rust-version = "1.56"

[features]
default = ["dynamic"]
static = ["rich-sdl2-rust/static"]
dynamic = ["rich-sdl2-rust/dynamic"]
vendor = ["rich-sdl2-rust/vendor"]

[dependencies]
rich-sdl2-rust = { version = "0.10.2", default-features = false }
static_assertions = "1.1.0"

[build-dependencies]
bindgen = "0.59.1"
git2 = "0.14.3"
